syntax = "proto3";
package persistence.schema.traits.v1beta1;
//package persistence.schema.types.v1beta1;

import "third_party/proto/cosmos_proto/cosmos.proto";
//import "third_party/proto/gogoproto/gogo.proto";
import "google/protobuf/any.proto";

option go_package = "traits/base";

message HasImmutables {
  option (cosmos_proto.implements_interface) = "HasImmutables";
  google.protobuf.Any properties = 1 [(cosmos_proto.accepts_interface) = "Properties"];
}

