syntax = "proto3";
package persistence.schema.types.base.v1beta1;

import "third_party/proto/cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

option go_package = "schema/types/base";

message fact {
  google.protobuf.Any hashID = 1 [(cosmos_proto.accepts_interface) = "ID"];
  google.protobuf.Any typeID = 2 [(cosmos_proto.accepts_interface) = "ID"];
  google.protobuf.Any signatures = 3 [(cosmos_proto.accepts_interface) = "Signature"];
}